Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/6491592/T6491592.out
T6491592.java:12:11: compiler.err.operator.cant.be.applied.1: +, java.lang.Object, compiler.misc.type.null
1 error
